<resources>
    <string name="app_name">Bon Appetit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Register">Register Yourself</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="full_name">Full Name</string>
    <string name="Register_here">Register Here</string>
    <string name="Bon_Appitit">Bon Appitit</string>
    <string name="sign_in">sign in</string>
    <string name="welcome_statement">Discover your food , and comforat your mood</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourites">Favourties</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My cart</string>
    <string name="submit" >Submit</string>
    <string name="go_back_to_login_screen"><![CDATA[Go back to login page->]]></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="cart_title_txt">Users cart</string>
    <string name="make_order">Make Order</string>
    <string name="Recipes">Recipes</string>
    <string name="method">Method</string>
    <string name="incredents">Igridients</string>
    <string name="name">Name of Dish</string>
    <string name="BonAppetit">dropDownMenu</string>
    <string-array name="TableNo">
        <item>Table 1</item>
        <item>Table 2</item>
        <item>Table 3</item>
        <item>Table 4</item>
        <item>Table 5</item>
        <item>Table 6</item>
        <item>Table 7</item>
        <item>Table 8</item>
        <item>Table 9</item>
        <item>Table 10</item>
    </string-array>

</resources>