<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bonappetit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dialy_meal"
        android:name="com.example.bonappetit.ui.daily_meal.Daily_meal_fragment"
        android:label="@string/daily_meal"
        tools:layout="@layout/daily_meal_fragment" />

    <fragment
        android:id="@+id/nav_recipe"
        android:name="com.example.bonappetit.ui.Recipes.RecipesFragment"
        android:label="Recipe"
        tools:layout="@layout/recipesfragment" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.example.bonappetit.ui.My_cartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" />
</navigation>