<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView50"
        android:layout_width="164dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yeseva_one"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FF9800 "
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView50"
        android:layout_width="381dp"
        android:layout_height="225dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50"
        app:srcCompat="@drawable/register"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/forgot_password"
        android:textColor="#EFA12D"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView50"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/email_id"
        android:layout_width="342dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="13dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#74534E4B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/updatepass"
        android:layout_width="146dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_bg_design"
        android:onClick="update"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_id"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="loginpage"
        android:text="@string/go_back_to_login_screen"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatepass"
        app:layout_constraintVertical_bias="0.329"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>