<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Welcomeactivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/forground_desgin"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/welcome1"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/welcometxt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeseva_one"
        android:text="@string/Bon_Appitit"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/welcometxt2"
        android:layout_width="342dp"
        android:layout_height="21dp"
        android:layout_marginTop="4dp"
        android:text="@string/welcome_statement"
        android:textAlignment="center"
        android:textColor="#EFA12D"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcometxt1"
        app:layout_constraintVertical_bias="0.043"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="201dp"
        android:layout_height="24dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/btn_bg_design"
        android:text="Already register?"
        android:textAlignment="center"
        android:textColor="#EFA12D"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/btn_bg_design"
        android:onClick="register"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcometxt2" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="66dp"
        android:layout_height="24dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textStyle="bold"
        android:onClick="login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.037" />

</androidx.constraintlayout.widget.ConstraintLayout>