<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Loginactivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/yeseva_one"
        android:text="@string/Bon_Appitit"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="372dp"
        android:layout_height="184dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:srcCompat="@drawable/register" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="357dp"
        android:layout_height="48dp"
        android:layout_marginTop="43dp"
        android:gravity="center"
        android:text="Sign-in Here"
        android:textAlignment="center"
        android:textColor="#EFA12D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="247dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="13dp"
        android:ems="11"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#E8131211"
        android:textColorHint="#74534E4B"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="247dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/ic_baseline_person_pin_24"
        android:drawablePadding="13dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#E8131211"
        android:textColorHint="#74534E4B"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/button"
        android:layout_width="176dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn_bg_design"
        android:drawablePadding="14dp"
        android:text="@string/sign_in"
        android:onClick="login"
        android:textAllCaps="false"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Don't have account?"
        android:textColor="#74534E4B"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="register"
        android:text="@string/Register"
        android:textColor="#C38B4D26"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="128dp"
        android:layout_height="20dp"
        android:layout_marginStart="201dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="16dp"
        android:text="Forgot Password?"
        android:textAlignment="center"
        android:textColor="#D88F440F"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>