<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Registrationactivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/yeseva_one"
        android:text="@string/Bon_Appitit"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="371dp"
        android:layout_height="195dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:srcCompat="@drawable/register" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="333dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:text="@string/Register_here"
        android:textAlignment="center"
        android:textColor="#EFA12D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="247dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="13dp"
        android:ems="11"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#E8131211"
        android:textColorHint="#74534E4B"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/address"
        android:layout_width="247dp"
        android:layout_height="52dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="82dp"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="13dp"
        android:ems="10"
        android:hint="address"
        android:inputType="text"
        android:textColor="#E8131211"
        android:textColorHint="#74534E4B"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="247dp"
        android:layout_height="52dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="82dp"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:drawablePadding="13dp"
        android:ems="10"
        android:hint="phone no."
        android:inputType="phone"
        android:textColor="#E8131211"
        android:textColorHint="#74534E4B"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="247dp"
        android:layout_height="53dp"
        android:layout_marginTop="14dp"
        android:drawableLeft="@drawable/ic_baseline_person_pin_24"
        android:drawablePadding="13dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#E8131211"
        android:textColorHint="#74534E4B"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <Button
        android:id="@+id/button"
        android:layout_width="176dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_bg_design"
        android:drawablePadding="14dp"
        android:onClick="onClick"
        android:text="@string/Register"
        android:textAllCaps="false"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Already Registered ?"
        android:textColor="#74534E4B"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="49dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="108dp"
        android:onClick="lsb"
        android:text="Sign in"
        android:textColor="#C38B4D26"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>